28.8 (ws)
      * supply correct position information to midi plugins in midi input
        strips
      * fixed: playing synti from midi track
22.8 (rj)
      * playing with midi plugins, one new example plugin: trigg
29.7 (ws)
      * fixed drawing of waveform in wave track. Concurrent wave file 
        accesses from gui and rt task produced distortions ("crackling").
25.7  (ng) DeicsOnze
      * add panic button
28.6. (ws)
      * updated README
      * small fixes to build system
23.6. (ws)
      * new project property dialog to edit the project comment
22.6. (ws)
      * fix: get reference count right when undo "split part"
      * implement: rename part
      * fix loading of cloned midi parts
21.6. (ws)
      * show controller name in controller canvas of midi editor
      * fix save/restore of controller editors in midi editor
      * fixed handling of midi channel selection flag
19.6. (ws)
      * fixed: mono plugins on stereo tracks work only on one channel
      * fixed drawing of cutted wave part
14.6. (ws)
      * fix build of libawlplugin.so; works for "release" build
12.6. (ws)
      * drag&drop of wave files with automatic sample rate conversion if
        necessary
9.6.  (ws)
      * clicking on controller event in controller editor changed
        controller value (fixed rounding error and start offset for drag)
8.6.
      * implemented deviceId for MidiPort
3.6. (rj)
      * fixed plugin drag&drop problem
      * enabled tool shortcuts in arranger
1.6. (ws)
      * fix crash when loading new song (old song has midi channels, new
        song has not)
      * drag/drop of projects in project dialog
      * added Roland  JV-1010 instrument definitions from f.fabre
29.5 (ws)
      * the list of available software synthesizer in 
        edit->AddTrack->AddSoftSynth was always empty
      * properly ignore close event in MusE::closeEvent() if the 
        user aborts operation
25.5 (ws)
      * remove automation buttons from midi track in arranger