@@ -18,7 +18,7 @@
 #  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #=============================================================================
 
-subdirs(libmidiplugin filter metronom transform trigg )
+subdirs(libmidiplugin filter metronom transform trigg dump )
 
 set ( CMAKE_CXX_FLAGS 
       "${CMAKE_CXX_FLAGS} -DQT_NO_DEBUG -DQT_PLUGIN -DQT_SHARED -fPIC"
